--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,23 @@
 /* Your Styling */
+
+h1 {
+	background: purple;
+	color: white;
+	margin: 2em auto 0 auto;
+	height: 100px;
+	width: 100px;
+
+	
+/*Centering horizonatal */
+	text-align: center;
+	line-height: 100px;
+/* 	make circle */
+
+	border-radius:100px;
+}
+
+h1:hover{
+
+	background: black;
+	transition background .5s;
+}
